@@ -25,7 +25,8 @@ constexpr const RideTypeDescriptor MazeRTD =
     SET_FIELD(StartTrackPiece, TrackElemType::Maze),
     SET_FIELD(TrackPaintFunction, get_track_paint_function_maze),
     SET_FIELD(Flags, RIDE_TYPE_FLAG_HAS_TRACK_COLOUR_SUPPORTS | RIDE_TYPE_FLAG_HAS_SINGLE_PIECE_STATION | RIDE_TYPE_FLAG_NO_TEST_MODE | RIDE_TYPE_FLAG_NO_VEHICLES |
-                     RIDE_TYPE_FLAG_TRACK_NO_WALLS | RIDE_TYPE_FLAG_IN_RIDE | RIDE_TYPE_FLAG_HAS_TRACK | RIDE_TYPE_FLAG_HAS_ENTRANCE_EXIT | RIDE_TYPE_FLAG_LIST_VEHICLES_SEPARATELY),
+                     RIDE_TYPE_FLAG_TRACK_NO_WALLS | RIDE_TYPE_FLAG_IN_RIDE | RIDE_TYPE_FLAG_HAS_TRACK | RIDE_TYPE_FLAG_HAS_ENTRANCE_EXIT | RIDE_TYPE_FLAG_LIST_VEHICLES_SEPARATELY |
+                     RIDE_TYPE_FLAG_PEEP_CAN_USE_UMBRELLA),
     SET_FIELD(RideModes, EnumsToFlags(RideMode::Maze)),
     SET_FIELD(DefaultMode, RideMode::Maze),
     SET_FIELD(OperatingSettings, { 1, 64, 0, 0, 0, 0 }),
